More fix on displaying the website on ios device

--- a/css/main.css
+++ b/css/main.css
@@ -147,8 +147,7 @@ body{
 .slide{
 	background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 620px;
+    background-size: 100% auto;
     position: relative;
     width: 100%;
 }
@@ -156,7 +155,7 @@ body{
 #home
 {
 	background-image:url(../img/home-background3.jpg);
-	min-height:650px;;
+	min-height:650px;
 	background-position: top;
 	
 }
@@ -542,6 +541,7 @@ body{
 
 #tagline{
 	background-image:url(../img/background-window.jpg);
+	min-height:650px;
 }
 
 #tagline .backgroundContainer{
@@ -559,7 +559,7 @@ body{
 #services{
 	background-image: url(../img/background-car-lights.jpg);
 	background-position:center bottom;
-	height: 1024px;
+	min-height: 1024px;
 	color: rgba(255, 255, 255, 1);
 	
 }
